--- a/TP1/ReadMe
+++ b/TP1/ReadMe
@@ -1,1 +1,16 @@
+- Y-a-t-il un organisateur désigné ?
+La mairie de Paris.
+- Qui seront les votants ?
+Tous les pocesseurs de vignettes Crit'Air.
+- Quelles seront les propositions ?
+Oui / Non / Ne sait pas.
+- Qui peut ajouter une proposition ?
+Personne.
+- Combien de temps durera le vote ?
+
+- Comment seront calculés les résultats ?
+Comptage du nombre de votes pour chaque proposition.
+- Peut-on faire des délégations ? Comment ?
+Non, on ne peut pas faire de délégations.
+- Quelles informations a-t-on sur les votants ? Comment s'assure-t-on que chacun ne vote que le nombre de fois autorisé ?
 
